--- a/smhi/settings.yml
+++ b/smhi/settings.yml
@@ -28,6 +28,35 @@ custom_fields:
   - 2
   - 3
   - 4
+- keyname: hours_narrow
+  field_type: select
+  name: Hour to show on half width
+  description: The hour to show forcast for.
+  options:
+  - "00"
+  - "01"
+  - "02"
+  - "03"
+  - "04"
+  - "05"
+  - "06"
+  - "07"
+  - "08"
+  - "09"
+  - "10"
+  - "11"
+  - "12"
+  - "13"
+  - "14"
+  - "15"
+  - "16"
+  - "17"
+  - "18"
+  - "19"
+  - "20"
+  - "21"
+  - "22"
+  - "23"
 - keyname: items_wide
   field_type: select
   name: Items to show on full width
@@ -40,5 +69,35 @@ custom_fields:
   - 6
   - 7
   - 8
+- keyname: hours_wide
+  field_type: select
+  name: Hours to show on full width
+  description: Picking 3 different hours and 8 items above will give a forcast for the coming 2.5 days.
+  options:
+  - "00"
+  - "01"
+  - "02"
+  - "03"
+  - "04"
+  - "05"
+  - "06"
+  - "07"
+  - "08"
+  - "09"
+  - "10"
+  - "11"
+  - "12"
+  - "13"
+  - "14"
+  - "15"
+  - "16"
+  - "17"
+  - "18"
+  - "19"
+  - "20"
+  - "21"
+  - "22"
+  - "23"
+  multiple: true
 name: SMHI
 refresh_interval: 720
